{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 200,
  "lineage": "82a5e14e-ff0e-e64f-8430-bf4521b3de0e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "all-port",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443",
                  "10250",
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-19T05:56:30.349-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/bustling-kayak-258808/global/firewalls/all-port",
            "name": "all-port",
            "network": "https://www.googleapis.com/compute/v1/projects/bustling-kayak-258808/global/networks/default",
            "priority": 1000,
            "project": "bustling-kayak-258808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bustling-kayak-258808/global/firewalls/all-port",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "all-port"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-19T06:02:22.860-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/bustling-kayak-258808/global/firewalls/default-allow-http",
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/bustling-kayak-258808/global/networks/default",
            "priority": 1000,
            "project": "bustling-kayak-258808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bustling-kayak-258808/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webserver",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200223",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bustling-kayak-258808/zones/asia-southeast1-c/disks/webserver"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/bustling-kayak-258808/zones/asia-southeast1-c/instances/webserver",
            "instance_id": "4512657754216181924",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "sshKeys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDKOY2LsOJdUZi6xhijkc/FJb7fLQAlelHSWhWGFdUjSBgEbEa2VKHOobm2eUaSI0FyvWlsgYQ72R1Hu1FPSDE1Ifboysk0AofLLVaa6qk4Cr5MgoKHQd6N8dqr4NgpaGK01m0WZPyk1Xe5v7pmjoamp5qvG7OucLDa7ECsE2zZBiOCCji/R83ltpUitohUKWky8OSD+Rj0LR7BbTjqmjUFaZ6xIT2UsGXJJSbT7qLjdQShIR7LPADfWhfuGIZYPhE6I5M6YLSAnZiq6Yq9hlaYPiI8x26jkyBJ29RNr0fOjfSiV3txZFc7VypRPZfDF9UQrvZHDFfrSnIRlpZTvJJaUC87zgg1mqU2ATUfUfwnjr6d9/GXDMk5mFMwOlhG3Bj4iASnWv+wlFTztRg4A4v9fvpYlRgkPeiSxlCbHdSW4Pe [...]
            },
            "metadata_fingerprint": "TsHa9zz7wJA=",
            "metadata_startup_script": "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -\nsudo add-apt-repository \"deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable\"\nsudo apt-get update\n\nsudo apt-get install -y docker-ce\nsudo curl -L \"https://github.com/docker/compose/releases/download/1.24.1/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\nsudo chmod +x /usr/local/bin/docker-compose\ndocker-compose -- [...]
            "name": "webserver",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.207.12",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bustling-kayak-258808/global/networks/default",
                "network_ip": "10.148.15.215",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bustling-kayak-258808/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "bustling-kayak-258808"
              }
            ],
            "project": "bustling-kayak-258808",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bustling-kayak-258808/zones/asia-southeast1-c/instances/webserver",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all-port",
              "default-allow-ssh",
              "http-server"
            ],
            "tags_fingerprint": "3RN0t3m_3ek=",
            "zone": "asia-southeast1-c"
          }
        }
      ]
    }
  ]
}